--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "framer-motion": "^12.9.2",
     "i18next": "^23.16.8",
     "i18next-http-backend": "^3.0.1",
     "ionicons": "^7.4.0",
